--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 title: Aishwarya Chennabathni
-#logo: /assets/img/logo.png
+logo: https://github.com/Aishwarya-chen11/portfolio/blob/main/imageedit_1_6803050626.jpg
 #description: Minimal is a theme for GitHub Pages.
 #show_downloads: true
 #google_analytics:
