--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 
 title: Aishwarya Chennabathni
-logo: <img src="https://github.com/Aishwarya-chen11/portfolio/blob/main/imageedit_1_6803050626.jpg" alt="Description" width="600"/>
+description: "Data Scientist"
+logo: /imageedit_1_6803050626.jpg
 #description: Minimal is a theme for GitHub Pages.
 #show_downloads: true
 #google_analytics:
