--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: Aishwarya Chennabathni
 description: "Data Scientist"
-logo: /imageedit_1_6803050626.jpg
+logo: /202408111541019602.jpg
 #description: Minimal is a theme for GitHub Pages.
 #show_downloads: true
 #google_analytics:
